Fixed alignment of entire page, removed naegative margins from sections

--- a/main.css
+++ b/main.css
@@ -1,12 +1,15 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+html {
+  background: #555;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
-  background: #000000;
-  overflow-x: hidden;
+  margin: 0 auto;
+  background-color: orange;
+
   }
   
   ul,li {
@@ -21,8 +24,9 @@ body {
 
   /* Structure */
  #wrapper {
-   width: 100%;
+   /* width: 100%; */
    width: 100vw;
+   height: 100vh;
  }
 
  /* ---------------------------- */
@@ -32,7 +36,7 @@ body {
   background: #111;
   text-align: right;
   padding: 10px;
-  margin-right: -5px;
+
 }
 
 .nav-icon {
@@ -133,31 +137,29 @@ body {
 
 
 .about {
-  background: #ffffff;
-  height: 100vh;
+  background: red;
+  height: 100vh 100%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-  margin: 0 -5px;
-  /* overflow: hidden; */
 }
  
-@media screen and (max-height: 450px) {
+/* @media screen and (max-height: 450px) {
   .about {overflow-y: auto;}
   .about a {font-size: 20px}
   .about {
-    max-width: 100%;
+    min-width: 100%;
   }
-}
+} */
 
 .colums-container {
   display: block;
   padding: 5%;
-  /* background: #000; */
-  max-width: 50%;
-  /* width: 100vw; */
-  /* height:100%; */
+  background: yellow;
+  max-width: 80%;
+  height:100%;
 }
 
 /* media queries for column breakdown */
@@ -193,12 +195,12 @@ body {
   z-index: 3;
   position: relative;
   max-width: 50%;
-  /* padding: 1%; */
+  padding: 1%;
 }
 
 .about-col-right {
-  /* background:red; */
-  /* z-index: 0; */
+  background:red;
+  z-index: 0;
   position: relative;
   margin-left: 50px;
   margin-top: -40px;
@@ -210,37 +212,37 @@ body {
 
 .col-middle {
   background: darkgray;
-  margin: 0 5px;
+
 }
 
 .col-right {
   background: #333;
-  margin: 0 5px;
+
   margin-left: -20px;
 }
 
 /* What I do */
 
-.whatido-col-middle {
+/* .whatido-col-middle {
   background: #fff;
   z-index: 3;
-  position: relative;
+  position: relative; */
   /* max-width: 50%; */
-  padding: 0px;
+  /* padding: 0px;
   margin-left: 60%;
   
-}
+} */
 
 
 .whatido-col-right {
   /* background:red; */
   /* z-index: 0; */
-  position: relative;
+  /* position: relative;
   margin-right: -10%;
   margin-top: -40px;
   height: 40%; 
   width: 70%;
-  padding: 20px;
+  padding: 20px; */
   /* max-width: 30%; */
 }
 
@@ -299,7 +301,7 @@ body {
 
 /* PROJECTS/PHOTOGRAPHY COLUMNS & IMAGES */
 .projects-col {
-  margin: 0 5px;
+
 }
 
 
@@ -331,7 +333,7 @@ body {
 
 
 .photography-col {
-  margin: 0 5px;
+
   align-self: center;
   margin-top: -10rem;
 }
@@ -350,7 +352,6 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0 -5px;
 }
 
 .skills-inner {
@@ -361,7 +362,7 @@ body {
 
 .skills-left {
   background: #222;
-  margin: 0 5px;
+
 }
 
 /* Image */
@@ -374,12 +375,12 @@ body {
 
 .col-middle {
   /* background: green; */
-  margin: 0 5px;
+
 }
 
 .col-right {
   background: #333;
-  margin: 0 5px;
+
 }
 
 
@@ -391,7 +392,6 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0 -5px;
 }
 
 .get-in-touch-inner {
@@ -409,7 +409,6 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 0 -5px;
 }
 
 .footer-inner {
